fixed typos and inaccuracies

--- a/documentation/jArticle.dita
+++ b/documentation/jArticle.dita
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE topic PUBLIC "-//OASIS//DTD DITA Topic//EN" "topic.dtd">
 <topic id="jArticle">
-  <title>Berichte/Nachrichten</title>
+  <title>Berichte, Nachrichten, Kommentare</title>
   <body>
     <p>
     Berichte und Nachrichten verschiedener Art, die in der Quelle unter einem thematischen Aspekt
