--- a/documentation/jArticleTypes.dita
+++ b/documentation/jArticleTypes.dita
@@ -7,11 +7,11 @@
     <section>
     	<title>Themen</title>
     	<ul>
-    		<li><xref href="jArticle.dita" scope="local">Berichte/Nachrichten</xref></li>
-<li><xref href="jFeuilleton.dita" scope="local">Feuilleton</xref></li>
-<li><xref href="jAnnouncements.dita" scope="local">Anzeigen</xref></li>
-<li><xref href="jLetters.dita" scope="local">Leserbriefe</xref></li>
-<li><xref href="jArtOther.dita" scope="local">Sonstige Artikel</xref></li></ul>
+    		<li><xref href="jArticle.dita" scope="local"/></li>
+<li><xref href="jFeuilleton.dita" scope="local"/></li>
+<li><xref href="jAnnouncements.dita" scope="local"/></li>
+<li><xref href="jLetters.dita" scope="local"/></li>
+<li><xref href="jArtOther.dita" scope="local"/></li></ul>
     </section>
   </body>
 </topic>
